src/desktop/src/ui/components/scrollbar.scss
.scrollbar {
    position: relative;
    height: 100%;
    overflow: hidden;
    padding-right: 20px;

    :global {
        .ps__rail-y {
            display: block;
            position: absolute;
            top: 0px;
            right: 7px;
            opacity: 0;
            width: 6px;
            border-radius: 6px;
            transition: opacity 200ms cubic-bezier(0.55, 0, 0.1, 1);

            .ps__thumb-y {
                cursor: pointer;
                border-radius: 6px;
                background: var(--body-alt);
                position: absolute;
                left: 0px;
                width: 6px;
            }
        }
    }

    &:hover {
        :global {
            .ps__rail-y {
                opacity: 1;
            }
        }
    }
}

